# pjy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.rst  examples.rst  pjy  pjy.py  pyproject.toml  setup.cfg  setup.py  test.py  update-version.sh
tests/: test.py
zsh/: _pjy
