[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pjy"
dynamic = ["version"]
description = "pjy - command-line JSON processor"
readme = "README.rst"
license = "WTFPL"
requires-python = ">=3"
keywords = [
    "filter",
    "jq",
    "json",
    "processor",
    "query",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Public Domain",
    "Topic :: Utilities",
    "Topic :: Text Processing :: Filters",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[[project.authors]]
name = "Hg"
email = "dev@indigo.re"

[project.optional-dependencies]
pygments = [
    "pygments",
]

[project.scripts]
pjy = "pjy:main"

[project.urls]
Project = "https://gitlab.com/hydrargyrum/pjy"

[tool.hatch.version]
path = "pjy.py"

[tool.hatch.build.targets.sdist]
include = [
    "/pjy.py",
]

[tool.hatch.build.targets.wheel.shared-data]
"README.rst" = "share/doc/pjy/README.rst"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
]

[tool.hatch.envs.default.scripts]
test = "pytest"

[tool.pytest.ini_options]
python_files = ["test.py"]
