[metadata]
name = pjy

description = pjy - command-line JSON processor
long_description = file: README.rst
keywords = json, processor, query, filter, jq
url = https://gitlab.com/hydrargyrum/pjy

license = WTFPLv2
author = Hg
author_email = dev@indigo.re

classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Public Domain
    Topic :: Utilities
    Topic :: Text Processing :: Filters
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = 1
python_requires = >=3
packages = find:

[options.data_files]
share/doc/pjy =
    README.rst

[options.extras_require]
pygments = pygments

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
